--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,8 +2,8 @@
   "extends": "./config/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist",
-    // "outFile": "dist/report.js", //输入单个文件
+    "outDir": "example/dist", // 批量输出
+    // "outFile": "example/dist/report.js", //输入单个文件
     "rootDir": "src"
   },
   "exclude": [],
